Fix Content Not Displaying Properly On Smaller Screens

--- a/style.css
+++ b/style.css
@@ -12,14 +12,15 @@ h2 {
 .scene {
     position: absolute;
     width: 100vw;
-    height: 100vh;
+    height: max-content;
     background: linear-gradient(to top left, #ffc2f5, #c782ff);
     top: 0;
     left: 0;
     display: flex;
-    /* justify-content: center; */
     align-items: center;
     flex-direction: column;
+    padding: 0;
+    margin: auto;
 }
 .glass {
     width: max-content;
@@ -32,7 +33,7 @@ h2 {
 .title {
     text-align: center;
     padding: 1rem 3rem;
-    margin: 4rem;
+    margin: 2rem;
 }
 .title h1 {
     margin-bottom: auto;
@@ -46,6 +47,7 @@ h2 {
 .socials {
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
 }
 .half {
     display: flex;
